editar y eliminar contacto

--- a/Lab3/app/src/main/AndroidManifest.xml
+++ b/Lab3/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".EditContactActivity">
+        </activity>
         <activity android:name=".MailActivity">
         </activity>
         <activity android:name=".ContactViewActivity">
